--- a/index.html
+++ b/index.html
@@ -1709,7 +1709,7 @@ setTimeout(() => {
 const sections = ['portalSection', 'citizenPage', 'inquiryPage', 'complaintsPage', 'complaintInquiryPage'];
 sections.forEach(id => {
 const el = document.getElementById(id);
-console.log(el ? `✅ ${id}: موجود` : `❌ ${id}: مفقود`);
+console.log(el ? '✅ ' + id + ': موجود' : '❌ ' + id + ': مفقود');
 });
 }, 500);
 </script>
